<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorWhite">

    <ImageButton
        android:id="@+id/image_back"
        android:layout_width="@dimen/size_56dp"
        android:layout_height="@dimen/size_56dp"
        android:background="@drawable/back"
        android:contentDescription="@string/previous" />

    <TextView
        android:id="@+id/text_title"
        style="@style/toolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_56dp"
        android:gravity="center"
        android:text="@string/sign_up" />

    <ImageView
        android:id="@+id/image_logout"
        android:layout_width="@dimen/size_56dp"
        android:layout_height="@dimen/size_56dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:contentDescription="@string/logout" />
</RelativeLayout>
