<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey">

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGrey"
        android:fillViewport="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/background"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/gl1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_choose_cover"
                android:layout_width="@dimen/size_32dp"
                android:layout_height="@dimen/size_32dp"
                android:layout_marginRight="@dimen/margin16dp"
                android:layout_marginTop="@dimen/margin64dp"
                android:background="@drawable/camera"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/image_avatar"
                android:layout_width="@dimen/size_150dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="@dimen/radius_4dp"
                app:layout_constraintBottom_toTopOf="@id/gl3"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gl2" />

            <ImageView
                android:id="@+id/image_choose_avatar"
                android:layout_width="@dimen/size_32dp"
                android:layout_height="@dimen/size_32dp"
                android:background="@drawable/camera"
                app:layout_constraintBottom_toTopOf="@id/gl3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/image_edit_profile"
                android:layout_width="@dimen/size_32dp"
                android:layout_height="@dimen/size_32dp"
                android:layout_marginRight="@dimen/margin16dp"
                android:background="@drawable/edit"
                android:padding="@dimen/padding32dp"
                app:layout_constraintBottom_toTopOf="@id/gl3"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/text_name_profile"
                style="@style/toolbarStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_48dp"
                android:layout_marginTop="@dimen/margin8dp"
                android:gravity="center"
                android:text="@string/full_name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gl3" />

            <TextView
                android:id="@+id/text_address"
                style="@style/profileStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_48dp"
                android:gravity="center"
                android:text="@string/address"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name_profile" />

            <TextView
                android:id="@+id/text_gender_profile"
                style="@style/profileStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_48dp"
                android:gravity="center"
                android:text="@string/gender"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_address" />

            <TextView
                android:id="@+id/text_age_profile"
                style="@style/profileStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_48dp"
                android:gravity="center"
                android:text="@string/Age"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_gender_profile" />

            <TextView
                android:id="@+id/text_decription_profile"
                style="@style/commonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/padding8dp"
                android:text="@string/lipsum_short"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_age_profile" />

            <android.support.constraint.Guideline
                android:id="@+id/gl1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <android.support.constraint.Guideline
                android:id="@+id/gl2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <android.support.constraint.Guideline
                android:id="@+id/gl3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.35" />

        </android.support.constraint.ConstraintLayout>

    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

    <include layout="@layout/gradient_header" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorWhite" />
</FrameLayout>
